# AnomalyDetector

./: CLI.cpp  CLI.h  CMakeLists.txt  CommandAlgoSettings.cpp  CommandAlgoSettings.h  CommandAnalyzeResults.cpp  CommandAnalyzeResults.h  CommandDetectAnomalies.cpp  CommandDetectAnomalies.h  CommandDisplayResults.cpp  CommandDisplayResults.h  CommandUpload.cpp  CommandUpload.h  HybridAnomalyDetector.cpp  HybridAnomalyDetector.h  README.md  Server.cpp  Server.h  ShareKnowledge.cpp  ShareKnowledge.h  SimpleAnomalyDetector.cpp  SimpleAnomalyDetector.h  anomaly_detection_util.cpp  commands.h  minCircle.cpp  minCircle.h  timeseries.cpp  timeseries.h
